--- a/packages/ui/.eslintrc.json
+++ b/packages/ui/.eslintrc.json
@@ -30,6 +30,7 @@
             }
         ],
         "react/react-in-jsx-scope": "off",
+        "react/no-unknown-property": "off",
         "prettier/prettier": "warn",
         "@typescript-eslint/naming-convention": "warn",
         "curly": "warn",
