--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -7,16 +7,17 @@
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
-  "dependencies": {
-    "@pgv/core": "0.0.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
   "devDependencies": {
+    "@pgv/core": "0.0.1",
+    "@react-three/fiber": "^8.10.1",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
+    "@types/three": "^0.148.0",
     "@vitejs/plugin-react": "^3.0.0",
     "eslint-plugin-react": "^7.32.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "three": "^0.148.0",
     "typescript": "^4.9.3",
     "vite": "^4.0.0"
   }
