set up some interfaces

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@ node_modules
 dist
 dist-ssr
 *.local
+coverage
+*.tsbuildinfo
 
 .vscode/*
 !.vscode/extensions.json
@@ -21,5 +23,4 @@ dist-ssr
 *.sln
 *.sw?
 
-*.tsbuildinfo
 vgtests
