--- a/packages/web/tsconfig.json
+++ b/packages/web/tsconfig.json
@@ -17,5 +17,8 @@
     "noEmit": true,
     "jsx": "react-jsx"
   },
-  "include": ["src"]
+  "include": ["src"],
+  "references": [{
+    "path": "../core"
+  }]
 }
