--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -10,6 +10,8 @@
   "devDependencies": {
     "@pgv/core": "0.0.1",
     "@types/three": "^0.148.0",
+    "d3": "^7.8.2",
+    "d3-selection-multi": "^1.0.1",
     "three": "^0.148.0",
     "vite": "^4.0.0"
   }
