--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,7 +39,7 @@ jobs:
           name: dist
           path: ./packages/web/dist
   deploy:
-    needs: [build]
+    needs: build
     runs-on: ubuntu-latest
     environment:
       name: github-pages
@@ -49,15 +49,15 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: dist
-          path: dist
-      - name: Checkout
-        uses: actions/checkout@v3
+          path: .
+      - name: Inspect
+        run: ls -al
       - name: Setup Pages
-        uses: actions/configure-pages@v3
+        uses: actions/configure-pages@v1
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
-          path: dist
+          path: .
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v1
