--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "license": "MIT",
   "scripts": {
     "web:dev": "yarn workspace @pgv/web dev",
+    "web:build": "yarn workspace @pgv/web build",
     "core:dev": "yarn workspace @pgv/core dev",
+    "core:build": "yarn workspace @pgv/core build",
     "lint": "eslint 'packages/**/{src,__tests__}/**/*.{js,jsx,ts,tsx}'",
     "test": "vitest",
     "coverage": "vitest run --coverage"
