--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,8 @@
 {
   "name": "@pgv/core",
   "version": "0.0.1",
+  "author": "William Gao <wlgao@ucsc.edu>",
+  "license": "MIT",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
