--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "scripts": {
     "web:dev": "yarn workspace @pgv/web dev",
     "web:build": "yarn workspace @pgv/web build",
+    "web:preview": "yarn workspace @pgv/web preview --port 8000",
     "core:dev": "yarn workspace @pgv/core dev",
     "core:build": "yarn workspace @pgv/core build",
     "lint": "eslint 'packages/**/{src,__tests__}/**/*.{js,jsx,ts,tsx}'",
