chore: pull in preact

--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -11,10 +11,12 @@
   },
   "devDependencies": {
     "@pgv/core": "0.0.1",
+    "@preact/preset-vite": "^2.5.0",
     "@types/three": "^0.148.0",
     "d3": "^5.9.2",
     "d3-selection-multi": "^1.0.1",
+    "preact": "^10.13.2",
     "three": "^0.148.0",
-    "vite": "^4.0.0"
+    "vite": "^4.2.0"
   }
 }
