feat: move select box to preact

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,7 +14,7 @@
     ],
     "rules": {
         "prettier/prettier": "warn",
-        "@typescript-eslint/naming-convention": "warn",
+        "@typescript-eslint/naming-convention": "off",
         "curly": "warn",
         "eqeqeq": "warn",
         "no-throw-literal": "warn"
