--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -12,10 +12,12 @@
   "devDependencies": {
     "@pgv/core": "0.0.1",
     "@preact/preset-vite": "^2.5.0",
+    "@preact/signals-core": "^1.2.3",
     "@types/three": "^0.148.0",
     "d3": "^5.9.2",
     "d3-selection-multi": "^1.0.1",
     "preact": "^10.13.2",
+    "sass": "^1.60.0",
     "three": "^0.148.0",
     "vite": "^4.2.0"
   }
