--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
+    "postbuild": "node ../../scripts/postbuild.js",
     "preview": "vite preview"
   },
   "devDependencies": {
