chore: add debug inspection step to workflow

--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -25,6 +25,8 @@ jobs:
         uses: actions/setup-node@v3
       - name: Install dependencies
         run: yarn install --frozen-lockfile
+      - name: Inspect
+        run: env
       - name: Run prebuild script
         run: ./scripts/prebuild.sh
       - name: Build core
